snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-all.jar.sha1
5172218bbff4c339647d175ccc9e6126dc37cfdb